--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
+    "nodemon": "^2.0.21",
     "uuid": "^9.0.0"
   }
 }
