--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express.js": "^1.0.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
