--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "express-session": "^1.17.3",
     "express.js": "^1.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
