--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.21",
+    "socket.io": "^4.7.1",
     "util": "^0.12.5",
     "uuid": "^9.0.0"
   }
